<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="none"
    android:visibility="visible">



    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textView"
            android:clickable="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addday_pick_date"
            android:id="@+id/button"
            android:clickable="true"
            android:onClick="showDatePickerDialog" />
            //android:layout_gravity="center_horizontal" />
        </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="viewStart">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addday_save"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/addday_day"
            android:id="@+id/textView2"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_above="@+id/button2"
            android:layout_margin="8dip" />

    </RelativeLayout>

</LinearLayout>